# MicroKit

./: .gitignore  Makefile  README.md  docker-compose.yml
consumer/: Dockerfile
microservices/catalog-service/: Dockerfile
microservices/catalog-service/catalog/: Makefile  pyproject.toml
microservices/catalog-service/catalog/catalog/: main.py
producer/: Dockerfile
