[tool.poetry]
name = "catalog"
version = "0.1.0"
description = "Catalog service use to manage categories, products, tags"
authors = ["Quan Vu <huyquan.vu.1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
